...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.auth.LoginFragment"
    android:background="@drawable/ob_bg"
    android:id="@+id/login_fragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/login_fragment_title"
...
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_margin="20dp"/>

    <com.pkmkcub.spectragrow.view.customview.Email
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_title"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textEmailAddress"
...
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_margin="20dp"/>

    <com.pkmkcub.spectragrow.view.customview.Password
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        android:paddingHorizontal="10dp"
...
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/snk_check"
        android:layout_margin="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/snk"
        android:fontFamily="@font/semibold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:buttonTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/forgot_pw"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:layout_margin="30dp"
        android:text="@string/log_btn"
        android:textSize="14sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/white_base"
        android:background="@drawable/btn_primary_states"
        android:backgroundTint="@color/yellow_pattern"
        app:layout_constraintStart_toStartOf="parent"
...
