<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_story_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.userstory.AddStoryFragment"
    android:background="@drawable/ob_bg">

    <ImageView
        android:id="@+id/iv_preview"
...
        android:layout_height="150dp"
        android:layout_margin="32dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_camera"
        android:contentDescription="@string/story_thumbnail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        android:background="@drawable/btn_primary_states"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_preview" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/write_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:hint="@string/title_story_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/write_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:hint="@string/desc_story_hint"
        android:background="@drawable/rounded_button"
...
        android:textSize="14sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="@id/write_desc"
        app:layout_constraintTop_toBottomOf="@id/write_desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_story"
        android:textColor="@color/black"
        android:background="@drawable/btn_primary_states"
...
