<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/story_list_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.userstory.ListStoryFragment"
    android:background="@drawable/ob_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/new_story_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:contentDescription="@string/btn_add"
        app:icon="@drawable/add"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_story" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
...
